# voxl

./: .gitignore  Cargo.toml  README.md  trace
src/: camera.rs  chunk.rs  ecs.rs  main.rs  renderer.rs  state.rs
src/ecs/: chunk.rs  components.rs  ecs.rs  entity.rs  mod.rs  voxel.rs
src/gfx/: chunk.rs  render.rs  voxel.rs
src/gfx/render/: camera.rs  renderer.rs  texture.rs  vertex.rs
